# e_market

./: README.md  docker-compose.yaml  pyproject.toml
commerc_net/: admin.py  apps.py
commerc_net/migrations/: 0001_initial.py
commerc_net/models/: base.py  factory.py  individual_entrepreneur.py  retail_network.py
commerc_net/serializers/: base.py  factory.py  individual_entrepreneur.py  retail_network.py
commerc_net/urls/: factory.py  individual_entrepreneur.py  retail_network.py
commerc_net/views/: factory.py  individual_entrepreneur.py  retail_network.py
e_market/: settings.py  urls.py
